# Community-Bot

./: .env  .gitignore  .replit  .wget-hsts  BannedCmds.json  Bot.py  CIDs.json  CrossLink.py  OIDs.json  README.md  SpIDs.json  Webserver.py  autostart.py  banned-commands.json  bot.coffee  bot.py  config.py  config.txt  example.config.json  example.env  help.txt  help1.txt  index.coffee  keepalive.py  main.py  main.sh  masters.json  package.json  pyproject.toml  reqs.txt  requirements.txt  sample-CIDs.json  sample-config.txt  start.py  start.sh  status.py  token.txt
cbmodules/: interpreter.py
cmds/: restart.coffee
cogs/: Moderation.py  WelcomeGoodbyes.py  basic.py  cog-get.yeet  commands-with-cogs.py  crosslink.py  error-handler.py  help.py  interpreter.py  master.py  math.py  serverlist.py  spoofing.py  spy.py  system.py
config/: crosslink-ids.json  masters.json  owner-ids.json
ext/: setup.rb
ext/addons/: mail.rb
ext/data/mail/spool/: README.md
ext/ruby/: setup.rb  setup.sh
ext/ruby/addons/: mail.rb
hata/: __init__.py  activity.py  application.py  audit_logs.py  channel.py  client.py  color.py  dereaddons_local.py  embed.py  emoji.py  eventloop.py  events.py  events_compiler.py  exceptions.py  executor.py  extension_loader.py  futures.py  gateway.py  guild.py  http.py  invite.py  message.py  oauth2.py  others.py  parsers.py  prettyprint.py  py_connector.py  py_formdata.py  py_helpers.py  py_multipart.py  py_reqrep.py  ratelimit.py  user.py  webhook.py
modules/: config.py
stuff/: start.py
(+3 files in other folders)
