[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Prox Neon <proxneon960@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
modules = "^1.0"
websockets = "^8.1"
aiohttp = "^3.6"
flask = "^1.1"
git-client = "^0.1.8"
sqlalchemy = "^1.3"
youtube-dl = "^2019.11"
xiangcheck = "^0.1.2"
leonardo-team = "^2015.5"
utils = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
